fix modgui enable button

--- a/modgui/stylesheet-tuna.css
+++ b/modgui/stylesheet-tuna.css
@@ -87,6 +87,10 @@
     width: 66px;
 }
 
+.x42-tuna{{{cns}}} .mod-footswitch.on {
+    background-position:top center;
+}
+
 .x42-tuna{{{cns}}} .mod-tuner-display {
     margin:0;
     position:relative;
